[project]
name = "imedbest"
version = "0.1.0"
description = "iMedBest Enterprise Django Backend"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "django>=5.0.0,<5.1.0",
    "django-environ>=0.11.0",
    "psycopg[binary]>=3.1.0",
    "pydantic>=2.7.0",
]

[dependency-groups]
dev = [
    "ipython>=8.24.0",
    "pytest-cov>=5.0.0",
    "pytest-django>=4.8.0",
    "ruff>=0.3.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.local"
pythonpath = ["src"]
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"src/users/migrations/*.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
