[project]
name = "imedbest"
version = "0.1.0"
description = "iMedBest Enterprise Django Backend"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "django>=5.1.15,<6.1.0",
    "django-environ>=0.11.0",
    "django-ninja>=1.6.2",
    "gunicorn>=23.0.0",
    "psycopg[binary]>=3.1.0",
    "pydantic>=2.7.0",
    "cryptography>=48.0.1",
    "pyjwt>=2.8.0",
    "requests>=2.31.0",
    "celery>=5.6.3",
    "redis>=8.0.0",
    "django-celery-results>=2.6.0",
]

[dependency-groups]
dev = [
    "ipython>=8.24.0",
    "pre-commit>=3.7.0",
    "pytest-cov>=5.0.0",
    "pytest-django>=4.8.0",
    "pytest-env>=1.6.0",
    "ruff>=0.3.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.local"
pythonpath = ["src"]
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "S",    # bandit security
    "B",    # bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "T20",  # flake8-print
    "PT",   # flake8-pytest-style
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "PTH",  # flake8-use-pathlib
    "ERA",  # eradicate (dead code)
    "PL",   # pylint
    "RUF",  # Ruff-specific rules
]
ignore = [
    "PLR2004", # Magic value comparison
    "S101",    # Allow assert statements (useful for testing)
    "N803",    # camelCase args required by external API spec (studyKey, siteKey, etc.)
    "N806",    # camelCase vars in functions (same reason as above)
    "PLC0415", # Deferred imports are intentional to avoid circular dependencies
    "E402",    # Mid-module imports used in AppConfig.ready() and signal connection patterns
    "PTH",     # os.path is used consistently throughout; pathlib migration is a separate task
    "RUF012",  # Django Meta class list/dict attributes don't need ClassVar annotations by convention
    "PLR0912", # Too many branches — some dispatch functions are inherently complex state machines
    "PLR0915", # Too many statements — ODM XML writer is a single coherent operation
    "RET504",  # Unnecessary assignment before return — often improves readability with named variables
    "RUF100",  # Unused noqa directive (useful for cross-version linting compatibility)
]

[tool.ruff.lint.extend-per-file-ignores]
# Do not enforce strict linter rules on auto-generated Django migrations
"src/**/migrations/*.py" = ["E501", "N806", "N999", "RUF012"]
"src/manage.py" = ["PLC0415"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
[tool.pytest_env]
CELERY_TASK_ALWAYS_EAGER = "True"
